Finished datawatcher code migration